--- a/Santhiya/index.html
+++ b/Santhiya/index.html
@@ -9,26 +9,26 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstrap-css -->
-<link href="/Needed/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="Needed/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!--// bootstrap-css -->
 <!--gallery pop-up-css file -->
-<link rel="stylesheet" href="/Needed/css/chocolat.css" type="text/css">
+<link rel="stylesheet" href="Needed/css/chocolat.css" type="text/css">
 <!-- // gallery pop-up-css file -->
 
 <!-- css -->
-<link rel="stylesheet" href="/Needed/css/style.css" type="text/css" media="all" />
-<link rel="stylesheet" href="/Needed/css/flexslider.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="Needed/css/style.css" type="text/css" media="all" />
+<link rel="stylesheet" href="Needed/css/flexslider.css" type="text/css" media="screen" />
 
 <!--// css -->
 <!-- font-awesome icons -->
-<link href="/Needed/css/font-awesome.css" rel="stylesheet"> 
+<link href="Needed/css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome icons -->
 <!-- font -->
 <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 <!-- //font -->
-<script src="/Needed/js/jquery-1.11.1.min.js"></script>
-<script src="/Needed/js/bootstrap.js"></script>
+<script src="Needed/js/jquery-1.11.1.min.js"></script>
+<script src="Needed/js/bootstrap.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 		$(".scroll").click(function(event){		
@@ -188,7 +188,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div> 
 				<div class="modal-body">
 					<div class="agileits-w3layouts-info">
-						<img src="/Needed/images/pop1.jpg" alt="" />
+						<img src="Needed/images/pop1.jpg" alt="" />
 						<p>Duis venenatis, turpis eu bibendum porttitor, sapien quam ultricies tellus, ac rhoncus risus odio eget nunc. Pellentesque ac fermentum diam. Integer eu facilisis nunc, a iaculis felis. Pellentesque pellentesque tempor enim, in dapibus turpis porttitor quis. Suspendisse ultrices hendrerit massa. Nam id metus id tellus ultrices ullamcorper.  Cras tempor massa luctus, varius lacus sit amet, blandit lorem. Duis auctor in tortor sed tristique. Proin sed finibus sem</p>
 					</div>
 				</div>
@@ -213,7 +213,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="grid">
 						<div class="col-xs-6 abt-w3limg">
 							<figure class="effect-jazz">
-								<img src="/Needed/images/sa.jpg" alt=""/>
+								<img src="Needed/images/sa.jpg" alt=""/>
 								<figcaption>
 									<h4>Best<span>looks</span></h4>  
 									<p>When I look into you eyes,I know I have found the mirror of my soul.</p> 
@@ -222,7 +222,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="col-xs-6 abt-w3limg">
 							<figure class="effect-jazz">
-								<img src="/Needed/images/New Project.png" alt=""/>
+								<img src="Needed/images/New Project.png" alt=""/>
 								<figcaption>
 									<h4>trend<span>point</span></h4>
 									<p>Everytime I see you ,I fall in love all over again.</p> 
@@ -287,7 +287,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="w3-team-grids">
 				<div class="col-md-4 w3-team-grid">
-					<img src="/Needed/images/foto5.jpg" alt="img">
+					<img src="Needed/images/foto5.jpg" alt="img">
 					<h3></h3>
 					<ul class="team-social">
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -296,7 +296,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</ul>
 				</div>
 				<div class="col-md-4 w3-team-grid">
-				<img src="/Needed/images/foto6.jpg" alt="img">
+				<img src="Needed/images/foto6.jpg" alt="img">
 					<h3></h3>
 					<ul class="team-social">
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -305,7 +305,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</ul>
 				</div>
 				<div class="col-md-4 w3-team-grid">
-				<img src="/Needed/images/foto7.jpg" alt="img">
+				<img src="Needed/images/foto7.jpg" alt="img">
 					<h3></h3>
 					<ul class="team-social">
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -322,8 +322,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <div class="gallery_sec" id="gallery">
         <div class="col-md-4 col-sm-4 col-xs-4 gal-sec">
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto1.jpg">
-                    <img src="/Needed/images/foto1.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto1.jpg">
+                    <img src="Needed/images/foto1.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>SkyWalk</h4>
                         <p>Description</p>
@@ -331,8 +331,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto2.jpg">
-                    <img src="/Needed/images/foto2.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto2.jpg">
+                    <img src="Needed/images/foto2.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>Vandalur</h4>
                         <p>Description</p>
@@ -340,8 +340,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto3.jpg">
-                    <img src="/Needed/images/foto3.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto3.jpg">
+                    <img src="Needed/images/foto3.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>SaravanaStore</h4>
                         <p>Description</p>
@@ -349,8 +349,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto4.jpg">
-                    <img src="/Needed/images/foto4.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto4.jpg">
+                    <img src="Needed/images/foto4.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>Phoneix Mall</h4>
                         <p>Description</p>
@@ -362,8 +362,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="col-md-4 col-sm-4 col-xs-4 gal-sec">
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto5.jpg">
-                    <img src="/Needed/images/foto5.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto5.jpg">
+                    <img src="Needed/images/foto5.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>Kishkindha</h4>
                         <p>Description</p>
@@ -371,8 +371,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto6.jpg">
-                    <img src="/Needed/images/foto6.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto6.jpg">
+                    <img src="Needed/images/foto6.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>Metro</h4>
                         <p>Description</p>
@@ -380,8 +380,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/saa.jpg">
-                    <img src="/Needed/images/saa.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/saa.jpg">
+                    <img src="Needed/images/saa.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>Casual Click</h4>
                         <p>Description</p>
@@ -389,8 +389,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto7.jpg">
-                    <img src="/Needed/images/foto7.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto7.jpg">
+                    <img src="Needed/images/foto7.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>Outing</h4>
                         <p>Description</p>
@@ -398,8 +398,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto19.jpg">
-                    <img src="/Needed/images/foto19.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto19.jpg">
+                    <img src="Needed/images/foto19.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>Phoneix Mall</h4>
                         <p>Description</p>
@@ -410,8 +410,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="col-md-4 col-sm-4 col-xs-4 gal-sec">
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto8.jpg">
-                    <img src="/Needed/images/imgpsh_fullsize.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto8.jpg">
+                    <img src="Needed/images/imgpsh_fullsize.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>Outing</h4>
                         <p>Description</p>
@@ -419,8 +419,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto9.jpg">
-                    <img src="/Needed/images/foto9.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto9.jpg">
+                    <img src="Needed/images/foto9.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>CuteClick wiht my sis</h4>
                         <p>Description</p>
@@ -428,8 +428,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </a>
             </div>
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="/Needed/images/foto22.jpg">
-                    <img src="/Needed/images/foto22.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/foto22.jpg">
+                    <img src="Needed/images/foto22.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
                         <h4>LoyalaCollage</h4>
                         <p>Description</p>
@@ -464,12 +464,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-5 w3layouts_mail_grid_left">
 					<div class="w3_agile_contact_left">
 						<ul>
-							<li><img src="/Needed/images/foto1.jpg" alt=" " class="img-responsive" /></li>
-							<li><img src="/Needed/images/foto5.jpg" alt=" " class="img-responsive" /></li>
-							<li><img src="/Needed/images/foto18.jpg" alt=" " class="img-responsive" /></li>
-							<li><img src="/Needed/images/foto19.jpg" alt=" " class="img-responsive" /></li>
-							<li><img src="/Needed/images/foto20.jpg" alt=" " class="img-responsive" /></li>
-							<li><img src="/Needed/images/foto21.jpg" alt=" " class="img-responsive" /></li>
+							<li><img src="Needed/images/foto1.jpg" alt=" " class="img-responsive" /></li>
+							<li><img src="Needed/images/foto5.jpg" alt=" " class="img-responsive" /></li>
+							<li><img src="Needed/images/foto18.jpg" alt=" " class="img-responsive" /></li>
+							<li><img src="Needed/images/foto19.jpg" alt=" " class="img-responsive" /></li>
+							<li><img src="Needed/images/foto20.jpg" alt=" " class="img-responsive" /></li>
+							<li><img src="Needed/images/foto21.jpg" alt=" " class="img-responsive" /></li>
 						</ul>
 					</div>
 				</div>
