--- a/Santhiya/index.html
+++ b/Santhiya/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Sample</title>
+<title>SandyVj</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="Wear Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -12,12 +12,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="Needed/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!--// bootstrap-css -->
 <!--gallery pop-up-css file -->
-<link rel="stylesheet" href="Needed/css/chocolat.css" type="text/css">
+<link rel="stylesheet" href="Needed/css/chocolat.css" type="text/css" media="screen">
 <!-- // gallery pop-up-css file -->
 
 <!-- css -->
 <link rel="stylesheet" href="Needed/css/style.css" type="text/css" media="all" />
-<link rel="stylesheet" href="Needed/css/flexslider.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="Needed/css/style1.css" type="text/css" media="all" />
+<link rel="stylesheet" href="Needed/css/single.css" type="text/css" media="all" />
+<link rel="stylesheet" href="Needed/css/easy-responsive-tabs.css" type="text/css" media="all" />
 
 <!--// css -->
 <!-- font-awesome icons -->
@@ -41,81 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <![endif]-->
 </head>
-<style>
-    *-- Gallery Section --*/ .gallery-grid1 img {
-        width: 100%;
-        cursor: pointer;
-    }
 
-    /*--Gallery hover effect--*/
-
-    .gallery-grid1 {
-        position: relative;
-        overflow: hidden;
-        cursor: pointer;
-    }
-
-        .gallery-grid1 .p-mask,
-        .row .product .vm-product-media-container .p-mask {
-            opacity: 0;
-            visibility: hidden;
-            background: rgba(4, 4, 4, 0.75);
-            bottom: 0%;
-            position: absolute;
-            padding: 1em 1.3em;
-            width: 100%;
-            -webkit-transform: translate3d( 0px, 100%, 0px);
-            -moz-transform: translate3d( 0px, 100%, 0px);
-            -ms-transform: translate3d( 0px, 100%, 0px);
-            -o-transform: translate3d( 0px, 100%, 0px);
-            transform: translate3d( 0px, 100%, 0px);
-            -webkit-transition: all .5s ease 0s;
-            -moz-transition: all .5s ease 0s;
-            transition: all .5s ease 0s;
-            text-align: left;
-        }
-
-            .gallery-grid1 .p-mask .p-desc {
-                color: #a3a3a3;
-                position: relative;
-                display: block;
-                margin-bottom: 10px;
-                padding-bottom: 10px;
-                font-size: 1em;
-            }
-
-        .gallery-grid1:hover .p-mask,
-        .row .product:hover .p-mask {
-            opacity: 1;
-            visibility: visible;
-            -webkit-transform: translate3d( 0px, 0px, 0px);
-            -moz-transform: translate3d( 0px, 0px, 0px);
-            -ms-transform: translate3d( 0px, 0px, 0px);
-            -o-transform: translate3d( 0px, 0px, 0px);
-            transform: translate3d( 0px, 0px, 0px);
-        }
-
-    .p-mask h4 {
-        color: #ff3c41;
-        font-size: 1.3em;
-        text-decoration: none;
-        line-height: 1.8em;
-        letter-spacing: 3px;
-    }
-
-    .p-mask p {
-        margin: 0;
-        color: #fff;
-        font-size: 13px;
-        letter-spacing: 2px;
-    }
-
-    .gal-sec {
-        padding: 0;
-    }
-
-    /*-- //Gallery Section --*/
-</style>
 <body>
 	<!-- banner -->
 	<div class="banner" id="home">
@@ -410,10 +338,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="col-md-4 col-sm-4 col-xs-4 gal-sec">
             <div class="gallery-grid1">
-                <a title="100% Satisfaction." href="Needed/images/foto8.jpg">
-                    <img src="Needed/images/imgpsh_fullsize.jpg" alt=" " class="img-responsive" />
+                <a title="100% Satisfaction." href="Needed/images/nt.jpg">
+                    <img src="Needed/images/nt.jpg" alt=" " class="img-responsive" />
                     <div class="p-mask">
-                        <h4>Outing</h4>
+                        <h4>Selfieee</h4>
                         <p>Description</p>
                     </div>
                 </a>
@@ -450,7 +378,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="testimonials" id="testimonials">
 	<div class="container">
 		<div class="w3-testimonials-head">
-		<h3>"I love you" means that I will love you and stand by you even through the worst of times.</h3>
+		<h4>"I love you" means that I will love you and stand by you even through the worst of times.</h3>
 		</div>
 		
 	</div>
